# OfficeClient

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: generateclient.h  main.cpp  officegenwidget.cpp  officegenwidget.h  officegenwidget.ui
